Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3418

Punch hole feature not supported on disks with FDE enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Trivial
    • Resolution: Fixed
    • 1.14.0, 1.15.0, 1.16.0
    • 1.17.0
    • supportability

    Description

      Some devices have security feature of "Full Disk Encryption" enabled on disks.
      For such cases, punch hole feature inside Ext type filesystem is not supported on most of the kernel versions.
      To run without hole punching (at the cost of some efficiency and scalability), Kudu needs to be reconfigured to use the file block manager.

      This Jira is to track the work to note this in Kudu documentation if not already present.
      Also, if possible check if error message can be made more clear when kudu cluster configuration hits this issue.

      Attachments

        Activity

          People

            araina Ashwani Raina
            araina Ashwani Raina
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: