KUDU-3418 Improve hole punching error message description.

Kudu LBM relies on hole punching support from filesystem.
However, it is possible that even with supported kernel version
and fileystem type, hole punching feature may not work.
Hole punching uses fallocate system call to do its job.
But it is evident from fallocate system call implementation of
ext4, that encrypted inodes are not supported.
Refer: https://elixir.bootlin.com/linux/latest/source/fs/ext4/extents.c#L4685

The same description is added to kHolePunchErrorMsg used by
CheckHolePunch method that checks for hole punching support.

Change-Id: If87401012052508b9cdf394cd33dc32fb58659d4
Reviewed-on: http://gerrit.cloudera.org:8080/19525
Reviewed-by: Mahesh Reddy <mreddy@cloudera.com>
Reviewed-by: Yingchun Lai <laiyingchun@apache.org>
Tested-by: Yingchun Lai <laiyingchun@apache.org>